# mastercard_solution_tech_stack_agent

./: .example.env  .gitignore  Dockerfile  Makefile  README.md  about.md  docker-compose.yml  mastercard_agent_ai_collection.json  mastercard_agentai_api_collection.json  pyproject.toml
docs/: Tech Stack.csv  Tech Stack.txt  kb.txt  meta_guidance.txt
src/: main.py
src/api/: data_model.py  logs_router.py  route.py
src/config/: appconfig.py  db_setup.py  settings.py
src/database/: pd_db.py  schemas.py
src/error_trace/: errorlogger.py
src/mastercard_solution_tech_stack_agent/: main.py
src/mastercard_solution_tech_stack_agent/api/: admin.py  auth.py  data_model.py  logs_router.py  route.py  schemas.py  super_admin.py  users.py
src/mastercard_solution_tech_stack_agent/config/: appconfig.py  db_setup.py  settings.py
src/mastercard_solution_tech_stack_agent/database/: pd_db.py  schemas.py
src/mastercard_solution_tech_stack_agent/error_trace/: errorlogger.py
src/mastercard_solution_tech_stack_agent/services/: agent_manger.py  manager.py  model.py
src/mastercard_solution_tech_stack_agent/templates/: chat.html  homepage.html  index.html  login.html  password_reset.html  password_reset_confirm.html  profile.html  signup.html  summarization.html  techstack.html
src/mastercard_solution_tech_stack_agent/utilities/: auth_utils.py  countries_utils.py  email_utils.py  gen_mermaid.py  helpers.py  load_faiss.py  prompt_loader.py  vectorstore_builder.py
src/services/: manager.py  model.py
src/services/mastercard_solution_tech_stack_agent_module/: agent.py  question_agent.py  toolskit.py  utils.py
src/templates/: index.html
src/utilities/: Printer.py  helpers.py  load_faiss.py  vectorstore_builder.py
(+61 files in other folders)
