[project]
name = "mastercard-solution-tech-stack-agent"
version = "0.1.0"
description = "A FastAPI-based Solution Architecture Tech Stack Agent for Mastercard Foundation."
authors = [
    {name = "Muhammad Abiodun SULAIMAN",email = "abiodun.msulaiman@gmail.com"}
]
readme = "README.md"

# Include all relevant packages under 'src/'
packages = [
    { include = "api", from = "src" },
    { include = "config", from = "src" },
    { include = "database", from = "src" },
    { include = "error_trace", from = "src" },
    { include = "services", from = "src" },
    { include = "utilities", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"  # ✅ Updated: Restrict to Python 3.11-3.12
langchain-openai = "^0.3.9"
fastapi = ">=0.115.11,<0.116.0"
pydantic = ">=2.10.6,<3.0.0"
pydantic-settings = ">=2.8.1,<3.0.0"
uvicorn = ">=0.34.0,<0.35.0"
python-dotenv = ">=1.0.1,<2.0.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.39"}
langgraph = "^0.3.18"
psycopg2 = "^2.9.10"
jinja2 = "^3.1.6"
alembic = "^1.15.1"
langchain = "^0.3.21"
langchain-community = "^0.3.20"
pandas = "^2.2.3"
openai = "^1.68.2"
faiss-cpu = "^1.10.0"
spacy = "^3.8.4"
autoflake = "^2.3.1"
autoflake8 = "^0.4.1"
autopep8 = "^2.3.2"
isort = "^6.0.1"
black = "^25.1.0"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
langchain-groq = "^0.3.1"
fastapi-mail = "^1.4.2"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
argon2-cffi = "^23.1.0"
bcrypt = "^4.3.0"
python-multipart = "^0.0.20"
authlib = "^1.5.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
